--- a/ITCC.VkPlayer/App.xaml
+++ b/ITCC.VkPlayer/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ITCC.VkPlayer"
-             StartupUri="MainWindow.xaml">
+             StartupUri="UI/Windows/LoginWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
