--- a/ITCC.VkPlayer/App.xaml
+++ b/ITCC.VkPlayer/App.xaml
@@ -1,9 +1,12 @@
 ﻿<Application x:Class="ITCC.VkPlayer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ITCC.VkPlayer"
              StartupUri="UI/Windows/LoginWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes/ApplicationTheme.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
