--- a/ITCC.VkPlayer/App.xaml
+++ b/ITCC.VkPlayer/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="ITCC.VkPlayer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="UI/Windows/LoginWindow.xaml">
+             StartupUri="UI/Windows/LoginWindow.xaml"
+             Exit="App_OnExit">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
