--- a/ITCC.VkPlayer/UI/Windows/AudiosWindow.xaml
+++ b/ITCC.VkPlayer/UI/Windows/AudiosWindow.xaml
@@ -17,6 +17,7 @@
 
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
@@ -77,13 +78,41 @@
                         Content="Вперед"
                         Click="NextSongButton_OnClick"></Button>
             </Grid>
+            
+            <Grid Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" MinHeight="20"></RowDefinition>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                </Grid.RowDefinitions>
+                
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"></ColumnDefinition>
+                    <ColumnDefinition Width="6*"></ColumnDefinition>
+                    <ColumnDefinition Width="1*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+
+                <Label Name="DurationLabel"
+                       HorizontalAlignment="Right"
+                       Grid.Column="1"
+                       Grid.Row="0"
+                       Margin="20,0,20,0"></Label>
+                
+                <ProgressBar Name="PlayProgressBar"
+                             Grid.Column="1"
+                             Grid.Row="1"
+                             Height="10"
+                             Margin="20,0,20,10"
+                             MouseLeftButtonUp="PlayProgressBar_OnMouseLeftButtonUp"></ProgressBar>
+            </Grid>
+            
 
             <ListView Name="AudiosListView"
-                      Grid.Row="1">
+                      Grid.Row="2">
                 <ListView.ItemTemplate>
                     <DataTemplate DataType="viewModels:AudioViewModel">
                         <Border BorderThickness="1">
-                            <Grid>
+                            <Grid Tag="{Binding Self}"
+                                  >
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="6*"></ColumnDefinition>
                                     <ColumnDefinition Width="2*"></ColumnDefinition>
@@ -111,7 +140,7 @@
             </ListView>
 
             <controls:ExitHelpFooterControl
-                Grid.Row="1"
+                Grid.Row="3"
                 VerticalAlignment="Bottom"
                 HorizontalAlignment="Stretch" />
         </Grid>
